--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
             <version>3.0.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- test -->
 
 
     </dependencies>
@@ -82,6 +83,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>external.atlassian.jgitflow</groupId>
+                <artifactId>jgitflow-maven-plugin</artifactId>
+                <version>1.0-m5.1</version>
+                <configuration>
+                    <!-- see goals wiki page for configuration options -->
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
