--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
     <name>integration</name>
     <description>Demo project for Spring Boot</description>
 
+    <scm>
+        <url>https://github.com/sofieneJamel/integration.git</url>
+        <connection>scm:git:https://github.com/sofieneJamel/integration.git</connection>
+        <developerConnection>scm:git:git@github.com/sofieneJamel/integration.git</developerConnection>
+    </scm>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -76,7 +82,6 @@
     </dependencies>
 
 
-
     <build>
         <plugins>
             <plugin>
@@ -89,7 +94,13 @@
                 <artifactId>jgitflow-maven-plugin</artifactId>
                 <version>1.0-m5.1</version>
                 <configuration>
-                    <!-- see goals wiki page for configuration options -->
+                    <flowInitContext>
+                        <masterBranchName>master</masterBranchName>
+                        <developBranchName>develop</developBranchName>
+                        <featureBranchPrefix>feature-</featureBranchPrefix>
+                        <releaseBranchPrefix>release-</releaseBranchPrefix>
+                        <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+                    </flowInitContext>
                 </configuration>
             </plugin>
 
